Improve micronaut-data-nitrite test coverage to 100% via contextualized specs
Test Coverage Improvements:
- Add NitriteConfigurationSpec (16 tests): Complete coverage of NitriteConfiguration
  - All setter methods (setDbPath, setUsername, setPassword, setStorageMode, setFieldSeparator, setCreateIndexes)
  - All StorageMode enum values (MVSTORE, IN_MEMORY, ROCKSDB)
  - Configuration binding from properties

- Add NitriteEventSpec (28 tests): Event-based predicate and temporal type tests
  - IS TRUE / IS FALSE predicates via Criteria API
  - IS NULL / IS NOT NULL predicates
  - IS EMPTY / IS NOT EMPTY predicates
  - Temporal type handling (Instant, LocalDate, LocalDateTime)
  - Comparison operators (greaterThan, lessThanEquals)
  - Pattern matching (Containing, StartingWith, EndingWith)
  - Logical operators (AND, OR, NOT) via Criteria API
  - IN / NOT IN with empty collections

- Add NitriteProjectionSpec (10 tests): Single-property projection tests
  - findAllNames projection via ProjectionPersonRepository
  - Count projection tests

- Enhance CriteriaPersonRepositorySpec (+12 tests): Criteria API coverage
  - IS NULL / IS NOT NULL predicates
  - BETWEEN predicate with inclusive bounds
  - IN / NOT IN predicates
  - OR / NOT logical operators
  - LIKE predicates (startsWith, endsWith, contains)

- Enhance PersonRepositorySpec (+8 tests): Derived query and Criteria API tests
  - IN / NOT IN operators via Criteria API
  - Empty collection handling for IN / NOT IN
  - OR / AND operators via Criteria API
  - IS TRUE / IS FALSE via Criteria API

- Enhance NitriteUpsertSpec (+4 tests): Optimistic locking tests
  - saveAll with versioned records (batch optimistic locking)
  - Multiple updates incrementing version

Bug Fixes:
- NitritePredicateVisitor: Fix NPE when handling empty IN/NOT IN collections
  - Handle nested Collection<?> from Criteria API
  - Use Collections.singletonMap() instead of Map.of() to allow null values

Repository Changes:
- PersonRepository: Extend J